<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_dark"
                tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#292929"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main"/>
        <TextView
            android:text="@string/interType"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:id="@+id/quarter1"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="55dp"
            android:layout_centerHorizontal="true"/>
    <Button
            android:text="@string/btn_envd"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="47dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="77dp"
            android:id="@+id/button"
            android:layout_centerHorizontal="true"/>
    <Button
            android:text="@string/btn_usn"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="117dp"
            android:id="@+id/usn_button"
            android:layout_alignParentStart="true"
            android:layout_marginStart="47dp"
            android:layout_centerHorizontal="true"/>
    <Button
            android:text="@string/btn_osno"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="47dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="157dp"
            android:id="@+id/button3"
            android:layout_centerHorizontal="true"/>
    <Button
            android:text="@string/btn_psn"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="47dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="197dp"
            android:id="@+id/button4"
            android:layout_centerHorizontal="true"/>
    <Button
            android:text="@string/btn_eshn"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="47dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="237dp"
            android:id="@+id/button2"
            android:layout_centerHorizontal="true"/>
    <Button
            android:text="@string/btn_exit"
            android:layout_width="178dp"
            android:layout_height="37dp"
            android:id="@+id/button_back"
            android:background="@drawable/rounded"
            android:onClick="onExit"
            android:textColor="@android:color/background_light"
            android:layout_alignParentStart="true"
            android:layout_marginStart="117dp"
            android:layout_marginTop="287dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"/>
</RelativeLayout>

