<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_dark"
                tools:context=".UsnActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:minHeight="?attr/actionBarSize"
                android:background="#292929"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Упрощенная система налогообложения"
                    android:textSize="18sp"
                    android:textColor="#FFF"/>

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <TextView
            android:text="@string/quarter1"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:id="@+id/quarter1"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="57dp"
            android:layout_marginLeft="57dp"
            android:layout_centerHorizontal="true"/>
    <TextView
            android:text="@string/quarter2"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:id="@+id/quarter2"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="127dp"
            android:layout_centerHorizontal="true"/>
    <TextView
            android:text="@string/quarter3"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:id="@+id/quarter3"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="197dp"
            android:layout_centerHorizontal="true"/>
    <TextView
            android:text="@string/quarter4"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:id="@+id/quarter4"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="267dp"
            android:layout_centerHorizontal="true"/>
    <EditText
        android:layout_width="394dp"
        android:layout_height="50dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/input_sum_quarter1"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:text="@string/sum"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="9dp"/>
    <EditText
            android:layout_width="394dp"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/input_sum_quarter2"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:textColor="@android:color/background_light"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:text="@string/sum"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="9dp"/>
    <EditText
            android:layout_width="394dp"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/input_sum_quarter3"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:textColor="@android:color/background_light"
            android:layout_marginTop="220dp"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:text="@string/sum"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="9dp"/>
    <EditText
            android:layout_width="394dp"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/input_sum_quarter4"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:textColor="@android:color/background_light"
            android:layout_marginTop="290dp"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:text="@string/sum"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="9dp"/>
    <Button
            android:text="@string/btn_sum"
            android:layout_height="wrap_content"
            android:id="@+id/button_sum"
            android:background="@drawable/rounded"
            android:textColor="@android:color/background_light"
            android:layout_width="380dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="350dp"
            android:textAllCaps="false"/>
    <Button
            android:text="@string/btn_clear"
            android:layout_height="37dp"
            android:id="@+id/button_clear"
            android:background="@drawable/rounded"
            android:textColor="@android:color/background_light"
            android:layout_width="178dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="224dp"
            android:layout_marginTop="413dp"
            android:layout_alignParentTop="true"
            android:textAllCaps="false"/>
    <Button
            android:text="@string/btn_back"
            android:layout_width="178dp"
            android:layout_height="37dp"
            android:id="@+id/button_back"
            android:background="@drawable/rounded"
            android:textColor="@android:color/background_light"
            android:layout_alignParentStart="true"
            android:layout_marginStart="218dp"
            android:layout_marginTop="413dp"
            android:layout_alignParentTop="true"
            android:textAllCaps="false"/>

</RelativeLayout>